scripts/nullaway/annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8.txt
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/KClass.java:104: error: [NullAway] dereferenced expression HostedClassInfo is @Nullable
		Method[] Methods = HostedClassInfo.getMethods();
		                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/KFunc.java:45: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null; /*throw new KonohaParserException("method not found: " + callee.getClass().getName() + "." + methodName);*/
		^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/KToken.java:39: error: [NullAway] initializer method does not guarantee @NonNull fields ResolvedSyntax (line 61), ResolvedObject (line 62) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public KToken(String text) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/KToken.java:43: error: [NullAway] initializer method does not guarantee @NonNull fields ResolvedSyntax (line 61), ResolvedObject (line 62) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public KToken(String text, long uline) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/KSyntax.java:102: error: [NullAway] dereferenced expression ParseMethod is @Nullable
			Integer NextId = (Integer)ParseMethod.invoke(ParseObject, UNode, TokenList, BeginIdx, EndIdx, ParseOption);
			                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/UntypedNode.java:136: error: [NullAway] dereferenced expression Syntax.ParseMethod is @Nullable
			KonohaDebug.P("(^^;) trying matching.. : " + Syntax.SyntaxName + ":" + Syntax.ParseMethod.getName());
			                                                                                         ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/UntypedNode.java:142: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.Syntax = null;
			            ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/UntypedNode.java:158: error: [NullAway] dereferenced expression RightNode is @Nullable
		if(RightNode.Syntax.IsBinaryOperator()) {
		            ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/UntypedNode.java:162: error: [NullAway] dereferenced expression RightNode.NodeList is @Nullable
				NewNode.SetAtNode(RightTerm, (UntypedNode)(RightNode.NodeList.get(LeftTerm)));
				                                                             ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/KGamma.java:37: error: [NullAway] dereferenced expression Node.Syntax.TypeMethod is @Nullable
			TNode = (TypedNode)Node.Syntax.TypeMethod.invoke(Node.Syntax.TypeObject, Gamma, Node, ReqType);
			                                         ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/KGamma.java:72: error: [NullAway] dereferenced expression TPrevNode is @Nullable
		return TPrevNode.GetHeadNode();
		                ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/SyntaxTree/BlockNode.java:21: error: [NullAway] read of @NonNull field ExprList before initialization
		this.ExprList.add(Node1);
		    ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/SyntaxTree/BlockNode.java:27: error: [NullAway] read of @NonNull field ExprList before initialization
		this.ExprList.add(Node1);
		    ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/SyntaxTree/BlockNode.java:35: error: [NullAway] read of @NonNull field ExprList before initialization
		this.ExprList.add(Node1);
		    ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/SyntaxTree/SwitchNode.java:10: error: [NullAway] initializer method does not guarantee @NonNull fields CondExpr (line 17), Labels (line 18), Blocks (line 19) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SwitchNode(KClass TypeInfo) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/SyntaxTree/LoopNode.java:8: error: [NullAway] initializer method does not guarantee @NonNull fields CondExpr (line 13), LoopBody (line 14), IterationExpr (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public LoopNode(KClass TypeInfo) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/LexicalConverter.java:25: error: [NullAway] assigning @Nullable expression to @NonNull field
		Token.ResolvedObject = ns.GetSymbol(Token.ParsedText);
		                     ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/GrammarSet/MiniKonoha.java:530: error: [NullAway] dereferenced expression m is @Nullable
			System.out.println("******* 1+2=" + m.Eval(p));
			                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/Konoha.java:178: error: [NullAway] unboxing of a @Nullable value
		return id;
		       ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/CodeGen/SimpleVMCodeGen.java:107: error: [NullAway] dereferenced expression Node.ConstObject is @Nullable
			push(Node.ConstObject.toString());
			                     ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/CodeGen/SimpleVMCodeGen.java:119: error: [NullAway] dereferenced expression Node.TypeInfo is @Nullable
		push("new " + Node.TypeInfo.ShortClassName.toString() + "()");
		                           ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/CodeGen/SimpleVMCodeGen.java:138: error: [NullAway] dereferenced expression Node.SourceToken is @Nullable
		AddLocalVarIfNotDefined(Node.SourceToken.ParsedText);
		                                        ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/CodeGen/SimpleVMCodeGen.java:143: error: [NullAway] dereferenced expression Node.SourceToken is @Nullable
		push(Node.SourceToken.ParsedText);
		                     ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/KNameSpace.java:39: error: [NullAway] initializer method does not guarantee @NonNull fields ImportedTokenMatrix (line 80), ImportedSymbolTable (line 141) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	KNameSpace(Konoha konoha, @Nullable KNameSpace parent) {
	^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/KNameSpace.java:47: error: [NullAway] dereferenced expression parent.GetTokenFunc(i) is @Nullable
					ImportedTokenMatrix[i] = parent.GetTokenFunc(i).Duplicate();
					                                               ^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/KNameSpace.java:164: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return (o instanceof KSyntax) ? (KSyntax) o : null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url901cc5721b_shidasan_KonohaCoffee_tgz-pJ8-org_KonohaScript_KonohaJ8/src/org/KonohaScript/SyntaxTree/TypedNode.java:48: error: [NullAway] dereferenced expression Node is @Nullable
		while(Node.PreviousNode != null) {
		          ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
27 errors
